# playground

./: README.md
python/alembic/: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  shell.nix
python/alembic/alembic/versions/: 11cb684ad801_remove_false_cities.py  191ea9a1f663_create_tables.py
python/poetry/: .envrc  .gitignore  Makefile  README.md  pyproject.toml  shell.nix
python/poetry/tests/: test_add.py  test_playground.py
typescript/deno/: .envrc  Makefile  deno.jsonc  deps.ts  example_test.ts
typescript/simulate-deploy/: Dockerfile  README.md  cloud.ts  components_test.ts  compute.ts  database.ts  deno.jsonc  developer.ts  developer_test.ts  docker-compose.yml  repo.ts  repo_test.ts  shell.nix  simulate.ts  simulate_test.ts  test.sh
