[tool.poetry]
name = "alembic-playground"
version = "0.0.0"
description = "A quick way to start playing with alembic with virtualenv"
authors = ["Heechul Ryu <ryuhcii@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"   # change the version to desired one
alembic = "^1.8.1" # remove or add pip packages of your choice
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
